[package]
name = "benches"
version = "0.0.0"
edition = "2018"

[dev-dependencies]
criterion = "0.3"
gramatika = { path = "../crates/gramatika" }
lox = { path = "../examples/lox" }
lox_manual_impl = { path = "../examples/lox_manual_impl" }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false
