[package]
name = "parse-framework-macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
convert_case = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }

[dev-dependencies]
parse-framework = { path = "../parse-framework" }
trybuild = { version = "1.0", features = ["diff"] }
