[package]
name = "parse-framework"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.5"
parse-framework-macro = { path = "../parse-framework-macro", optional = true }

[features]
macros = ["parse-framework-macro"]
