[package]
name = "gramatika-macro"
version = "0.3.1"
edition = "2018"
authors = ["Danny McGee <dannymcgee@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "http://github.com/dannymcgee/gramatika"
description = "Proc macros for Gramatika"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
anyhow = "1"
arcstr = "1.1"
convert_case = "0.4"
itertools = { git = "https://github.com/rust-itertools/itertools.git", rev = "3307e4da2e5a5fbaedc7a478ce9709a76874d4c3" }
once_cell = "1"
proc-macro2 = "1.0"
quote = "1.0"
regex-automata = "0.1"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
gramatika = { path = "../gramatika", features = [] }
trybuild = { version = "1.0", features = ["diff"] }
