[package]
name = "gramatika"
version = "0.3.1"
edition = "2018"
authors = ["Danny McGee <dannymcgee@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "http://github.com/dannymcgee/gramatika"
description = "A minimal toolkit for writing parsers with Rust"

[dependencies]
arcstr = { version = "1.1", features = ["substr"] }
lazy_static = { version = "1.4", optional = true }
once_cell = { version = "1.8", optional = true }
regex = { version = "1.5", optional = true }
regex-automata = { version = "0.1", optional = true }

[dependencies.gramatika-macro]
version = "0.3.1"
path = "../gramatika-macro"
optional = true

[features]
default = ["macros"]
macros = [
	"gramatika-macro",
	"lazy_static",
	"once_cell",
	"regex",
	"regex-automata",
]
